# PDFTextTracker

./: main.py  pdf_finder.py  pyproject.toml  replit.nix  requirements.txt
attached_assets/: Pasted--PDF-Finder-com-OCR-no-Replit-Este-prompt-permite-criar-um-aplicativo-no-Replit-que-busca-e-dest-1741266955449.txt
static/css/: custom.css
static/js/: script.js
static/signatures/: signature_styles.js
templates/: base.html  index.html  view_pdf.html
